--- a/BSiNS/Src/scrEntry.fx.yaml
+++ b/BSiNS/Src/scrEntry.fx.yaml
@@ -316,7 +316,7 @@
                                         }
                                     )
                                 );
-                            Width: =Parent.Width
+                            Width: =580
                             X: =0
                             Y: =0
                             ZIndex: =1
