--- a/BSiNS/CanvasManifest.json
+++ b/BSiNS/CanvasManifest.json
@@ -103,12 +103,12 @@
     "ContainsThirdPartyPcfControls": false,
     "DefaultConnectedDataSourceMaxGetRowsCount": 500,
     "DocumentAppType": "DesktopOrTablet",
-    "DocumentLayoutHeight": 768,
+    "DocumentLayoutHeight": 1366,
     "DocumentLayoutLockOrientation": false,
     "DocumentLayoutMaintainAspectRatio": false,
-    "DocumentLayoutOrientation": "landscape",
+    "DocumentLayoutOrientation": "portrait",
     "DocumentLayoutScaleToFit": false,
-    "DocumentLayoutWidth": 1366,
+    "DocumentLayoutWidth": 768,
     "DocumentType": "App",
     "EnableInstrumentation": false,
     "FileID": "59b4b38a-4a1b-4c4b-ac59-bfc860c9a040",
