--- a/BSiNS/Src/scrEntry.fx.yaml
+++ b/BSiNS/Src/scrEntry.fx.yaml
@@ -311,7 +311,7 @@
                                         }
                                     )
                                 );
-                            Width: =640
+                            Width: =Parent.Width
                             X: =0
                             Y: =0
                             ZIndex: =1
