--- a/BSiNS/Src/scrEntry.fx.yaml
+++ b/BSiNS/Src/scrEntry.fx.yaml
@@ -175,7 +175,7 @@
                         RadiusBottomRight: =4
                         RadiusTopLeft: =4
                         RadiusTopRight: =4
-                        Width: =con_FileType.Width
+                        Width: =Parent.Width - 47
                         ZIndex: =1
 
                         dd_Status As Dropdown.pcfdataset:
