--- a/BSiNS/Src/scr_XMLOtpremnice.fx.yaml
+++ b/BSiNS/Src/scr_XMLOtpremnice.fx.yaml
@@ -234,10 +234,6 @@ scr_XMLOtpremnice As screen:
         LayoutGap: =10
         LayoutJustifyContent: =LayoutJustifyContent.SpaceBetween
         LayoutMode: =LayoutMode.Auto
-        PaddingBottom: =16
-        PaddingLeft: =16
-        PaddingRight: =16
-        PaddingTop: =16
         RadiusBottomLeft: =4
         RadiusBottomRight: =4
         RadiusTopLeft: =4
@@ -255,7 +251,7 @@ scr_XMLOtpremnice As screen:
             Logo: =FFLogo
             LogoTooltip: =
             OnSelectLogo: =Navigate(scrEntry)
-            Title: ="SKLADIŠNE OTPREMNICE"
+            Title: ="SKLADIŠNE OTPREMNICE AAAAAAAAAAAAAAAAA"
             UserEmail: =User().Email
             UserImage: =User().Image
             UserName: =User().FullName
